; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/executor/extr_insert_select_executor.c_CoordinatorInsertSelectExecScan.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/executor/extr_insert_select_executor.c_CoordinatorInsertSelectExecScan.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@insertSelectExecutorLevel = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @CoordinatorInsertSelectExecScan(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  store i32* null, i32** %3, align 8
  %4 = load i32, i32* @insertSelectExecutorLevel, align 4
  %5 = add nsw i32 %4, 1
  store i32 %5, i32* @insertSelectExecutorLevel, align 4
  %6 = call i32 (...) @PG_TRY()
  %7 = load i32*, i32** %2, align 8
  %8 = call i32* @CoordinatorInsertSelectExecScanInternal(i32* %7)
  store i32* %8, i32** %3, align 8
  %9 = call i32 (...) @PG_CATCH()
  %10 = load i32, i32* @insertSelectExecutorLevel, align 4
  %11 = add nsw i32 %10, -1
  store i32 %11, i32* @insertSelectExecutorLevel, align 4
  %12 = call i32 (...) @PG_RE_THROW()
  %13 = call i32 (...) @PG_END_TRY()
  %14 = load i32, i32* @insertSelectExecutorLevel, align 4
  %15 = add nsw i32 %14, -1
  store i32 %15, i32* @insertSelectExecutorLevel, align 4
  %16 = load i32*, i32** %3, align 8
  ret i32* %16
}

declare dso_local i32 @PG_TRY(...) #1

declare dso_local i32* @CoordinatorInsertSelectExecScanInternal(i32*) #1

declare dso_local i32 @PG_CATCH(...) #1

declare dso_local i32 @PG_RE_THROW(...) #1

declare dso_local i32 @PG_END_TRY(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
